--- a/styles.css
+++ b/styles.css
@@ -3,3 +3,7 @@ body {
     background: lightgrey;
 }
 span.redText { color:red}
+
+textarea {
+    font-family:Consolas,Monaco,Lucida Console,Liberation Mono,DejaVu Sans Mono,Bitstream Vera Sans Mono,Courier New, monospace;
+}
