Added files related to jquery nav bar
testing to see if .load() works when on a server
(does not work locally in the default browser,
idk if it is the ajax call security thingy
or buggy code)

--- a/styles.css
+++ b/styles.css
@@ -38,3 +38,7 @@ textarea {
     background-color: #4400ff;
     color: white;
 }
+#nav ul li a.active {
+    color: #ff0000;
+    font-weight: bold;
+}
