--- a/styles.css
+++ b/styles.css
@@ -8,8 +8,9 @@ div.mainText {
 }
 
 span.redText { 
-    color:red 
+    color:red;
 }
+
 
 textarea {
     font-family:Consolas,Monaco,Lucida Console,Liberation Mono,DejaVu Sans Mono,Bitstream Vera Sans Mono,Courier New, monospace;
